--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 		<head>
 			<meta charset="utf-8">
-			<title>Marlena Nowak Visual Designer</title>
-			<meta name="description" content="Web design, brand identity, visual strategy">
+			<title>Marlena Nowak Designerin</title>
+			<meta name="description" content="Web design, brand identity, visual strategy, code">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="grid.css" type="text/css">
 			<link rel="stylesheet" href="style.css" type="text/css">
@@ -17,7 +17,7 @@
 			<header>
 
 				<nav>
-					<a href="#">hi! I'm Marlena Nowak - digital product designer (UI/UX)</a>
+					<a href="#">hello! I'm Marlena - coding designer (UI/UX)</a>
 				</nav>
 
 					<h1>what can I design for you?</h1>
@@ -77,7 +77,7 @@
 				<div class="col-md-3">
 
 				<img src="img/img1.jpg" class="cross" alt="black rotated cross">
-				<h3>code</h3></a>
+				<h3><a href="https://github.com/moimadeleine" target="_blank">code</a></h3>
 				<p>Currently, I am uncovering the secrets of&nbspHTML&nbsp5 and CSS&nbsp3.</p>
 			</div>
 
@@ -147,13 +147,13 @@
 
 
 				<h2>about me</h2>
-				<p>I am a visual designer with deep awareness of user experience and HTML/CSS skills. I'm passionate about designing which to me means not only visual design but&nbspalso design thinking, questioning, exploring, creating, innovating. <span class="highlighted">I&nbsplove to explore new ways of&nbspsolving problems</span> and look for new solutions to&nbspexisting problems as well as identify problems that&nbspstill need to be solved. At the moment, I am working also&nbspas&nbspa coding designer, which gives me a&nbsplot&nbspof fun.</p>
+				<p>I am a coding designer (UI/UX) with HTML/CSS skills. I'm passionate about designing which to me means not only visual design but&nbspalso design thinking, questioning, exploring, creating, innovating. <span class="highlighted">I&nbsplove to explore new ways of&nbspsolving problems</span> and look for new solutions to&nbspexisting problems as well as identify problems that&nbspstill need to be solved. At the moment, I am working also&nbspas&nbspa coding designer, which gives me a&nbsplot&nbspof fun.</p>
 
 
 				<h2>contact</h2>
 				<ul class="list">
 					<li>Marlena Nowak</li>
-					<li>Visual Designer</li>
+					<li>Coding Designer</li>
 					<li><span class="highlighted">designedinpoland@gmail.com</span></li>
 					<li>+48 666 511 323</li>
 
@@ -203,8 +203,7 @@
 
 			<footer>
 				<p>Thank you for taking your time to visit my site.</p>
-				<p>I want to ask you for understanding if something does not seem to work yet.<br>That is because the site is still under construction.</p>
-					<p>Design and code were made by me, 2019.</p>
+					<p>designerin.pl 2019</p>
 
 
 			</footer>
