--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 		<head>
 			<meta charset="utf-8">
-			<title>Marlena Nowak Designerin</title>
-			<meta name="description" content="Web design, brand identity, visual strategy, code">
+			<title>Marlena Nowak • Design • UI&UX • Coding</title>
+			<meta name="description" content="Web & app design, brand identity, visual strategy, coding">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="grid.css" type="text/css">
 			<link rel="stylesheet" href="style.css" type="text/css">
@@ -17,7 +17,7 @@
 			<header>
 
 				<nav>
-					<a href="#">hello! I'm Marlena - coding designer (UI/UX)</a>
+					<a href="#">hello! I'm Marlena - a coding designer (UI/UX)</a>
 				</nav>
 
 					<h1>what can I design for you?</h1>
@@ -147,7 +147,7 @@
 
 
 				<h2>about me</h2>
-				<p>I am a coding designer (UI/UX) with HTML/CSS skills. I'm passionate about designing which to me means not only visual design but&nbspalso design thinking, questioning, exploring, creating, innovating. <span class="highlighted">I&nbsplove to explore new ways of&nbspsolving problems</span> and look for new solutions to&nbspexisting problems as well as identify problems that&nbspstill need to be solved. At the moment, I am working also&nbspas&nbspa coding designer, which gives me a&nbsplot&nbspof fun.</p>
+				<p>I'm a designer (UI/UX) with HTML/CSS skills. I'm passionate about designing which to me means not only visual design but&nbspalso design thinking, questioning, exploring, creating, innovating. <span class="highlighted">I&nbsplove to explore new ways of&nbspsolving problems</span> and look for new solutions to&nbspexisting problems as well as identify problems that&nbspstill need to be solved. At the moment, I am working also&nbspas&nbspa coding designer, which gives me a&nbsplot&nbspof fun.</p>
 
 
 				<h2>contact</h2>
